#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- =.bash_profile= file

- =grepcount= command for searching files and organising
  result on number of matches

- =greptxt= and =greptext= aliases for searching =.txt= files
  and organising results on number of matches

- =cman= alias for =connmanctl=

- =office-monitor-show= and =office-monitor-hide= commands for
  enabling/disabling office monitor

- support for high-priority custom scripts

- support for owncloud sync exclude list

- support for personal environment file

*** Emacs

- add new GTD context tags
  - =@laptop=
  - =@motorbike=
  - =@phone=
  - =@planning=

- agenda view for =Creative [I]maginings=

- automatic spell-checking for =org-mode=

- command for prompting for and inserting (org) links with
  descriptions

- configuration for =checkdoc=

- configuration for =org-re-reveal=

- fill-column for =latex-mode=

- fill-column for =markdown-mode=

*** Installer

- =configure_dev_terminal= recipe

- install configuration for =agda=

- install configuration for =htop=

- install configuration for =ocaml=

- install configuration for =slack=

- install configuration for =texlive=

- install configuration for =xrandr=

*** Snippets

**** =latex-mode=

- =begin=
- =lists/itemize=
- =math/align-star=
- =proof=
- =sectioning/paragraph=
- =sectioning/section=
- =sectioning/subparagraph=
- =slide=
- =todo-bmi=
- =unused-lemma=

**** =org-mode=

- =blocks/block-latex=
- =blocks/block-quote=
- =blocks/source-block=
- =blocks/source-block-emacs-lisp=
- =includes/include=
- =includes/include-min-level=
- =properties/basic-property=
- =quote-with-author-and-time=
- =tex/begin-definition-tex=
- =tex/begin-tex=
- =tex/granule=
- =title=
- =todo-comment=

*** Xmobar

- indicator for audio volume and status

- indicator for microphone volume and status

- indicator for network ESSID and quality

- indicator for usage and expected lifetime of battery

*** XMonad
