@@ -1,0 +1,5 @@
+[Main View]
+SplitterSizes=295,1545
+
+[Reviews]
+AnnotationTools=<tool id="1" type="note-linked"><engine type="PickPoint" color="#ffffff00" hoverIcon="tool-note"><annotation type="Text" icon="Note" color="#ffffff00"/></engine><shortcut>1</shortcut></tool>,<tool id="2" type="note-inline"><engine type="PickPoint" color="#ffffff00" block="true" hoverIcon="tool-note-inline"><annotation type="FreeText" color="#ffffff00"/></engine><shortcut>2</shortcut></tool>,<tool id="3" type="ink"><engine type="SmoothLine" color="#ff00ff00"><annotation type="Ink" width="2" color="#ff00ff00"/></engine><shortcut>3</shortcut></tool>,<tool id="4" type="highlight"><engine type="TextSelector" color="#ffffff00"><annotation type="Highlight" color="#ffffff00"/></engine><shortcut>4</shortcut></tool>,<tool id="5" type="straight-line"><engine type="PolyLine" points="2" color="#ffffe000"><annotation type="Line" width="1" color="#ffffe000"/></engine><shortcut>5</shortcut></tool>,<tool id="6" type="polygon"><engine type="PolyLine" points="-1" color="#ff007eee"><annotation type="Line" width="1" color="#ff007eee"/></engine><shortcut>6</shortcut></tool>,<tool id="7" type="stamp"><engine type="PickPoint" block="true" size="64" hoverIcon="okular"><annotation type="Stamp" icon="okular"/></engine><shortcut>7</shortcut></tool>,<tool id="8" type="underline"><engine type="TextSelector" color="#ff000000"><annotation type="Underline" color="#ff000000"/></engine><shortcut>8</shortcut></tool>,<tool id="9" type="ellipse"><engine type="PickPoint" color="#ff00ffff" block="true"><annotation type="GeomCircle" width="5" color="#ff00ffff"/></engine><shortcut>9</shortcut></tool>,<tool id="10" type="typewriter"><engine type="PickPoint" block="true"><annotation type="Typewriter" width="0" color="#00ffffff" textColor="#ff000000"/></engine></tool>,<tool id="11" type="highlight" name="Highlight Section"><engine type="TextSelector" color="#ffffaaff"><annotation type="Highlight" color="#ffffaaff"/></engine></tool>
